# OpenSimplexCPP

./: .gitignore  CMakeLists.txt  Makefile  OpenSimplex.h  OpenSimplexTest.cpp  README.md  open-simplex-noise-test  open-simplex-noise-test.cpp  open-simplex-noise.cpp  open-simplex-noise.h
examples/: CMakeLists.txt  OpenSimplexExample.cpp
include/OpenSimplex/: Context.h  Environment.h  Noise.h  OpenSimplex.h  Seed.h
src/OpenSimplex/: Noise.cpp  Seed.cpp
test/: OpenSimplexTest.cpp
